@@ -1,5 +1,15 @@
 2004-08-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/sp-item.h, src/sp-item.cpp: (i2anc_affine): New function
+	  (essentially a rename of existing private partial_xform function, but
+	  differing behaviour on encountering non-SPItem in the hierarchy).
+
+	  (i2i_affine): New function (essentially a rename of existing
+	  SPItem::getRelativeAffine).  Implement SPItem::getRelativeAffine in
+	  terms of the new function.
+
+	  (sp_item_dt2i_affine): NR::Matrix version.
+
 	* src/libnr/nr-path.h (c, setC): new methods.
 
 2004-08-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
